# FDLauncher

./: .gitignore  CMakeLists.txt  FDLauncher.pro  FDLauncher_pt.qm  FDLauncher_pt.ts  README.md  audio.cpp  audio.h  fdsettings.cpp  fdsettings.h  gameselectwindow.cpp  gameselectwindow.h  gameselectwindow.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  host_dialog.cpp  host_dialog.h  host_dialog.ui  infodialog.cpp  infodialog.h  infodialog.ui  ini.h  join_dialog.cpp  join_dialog.h  join_dialog.ui  launcher.cpp  launcher.h  main.cpp  multiplayer_dialog.cpp  multiplayer_dialog.h  multiplayer_dialog.ui  resolution.cpp  resolution.h  resources.qrc  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  translate.bat
libs/OpenAL/x86/: OpenAL32.lib
libs/libogg/x64/: ogg.lib
libs/libogg/x86/: ogg.lib
libs/libvorbis/x64/: vorbis.lib  vorbisenc.lib  vorbisfile.lib
libs/libvorbis/x86/: vorbis.lib  vorbisenc.lib  vorbisfile.lib
resources/: icon3.pdn
